--- a/index.html
+++ b/index.html
@@ -125,8 +125,43 @@
             <div class="overview__rating-average">8.6</div>
             <div class="overview__rating-count">429 votes</div>
           </div>
-
         </div>
+
+        <div class="detail">
+          <div class="description">
+            <p class="paragraph">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi deleniti, impedit totam quibusdam, commodi eum est odit, eaque sunt in distinctio nisi a maiores explicabo quae. Quisquam sunt omnis sequi?
+            </p>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, accusantium!
+            </p>
+            <ul class="list">
+              <li class="list__item">Close to the beach</li>
+              <li class="list__item">Breakfast Included</li>
+              <li class="list__item">Free airport shuttle</li>
+              <li class="list__item">Free wifi in all rooms</li>
+              <li class="list__item">Air conditioning and heating</li>
+              <li class="list__item">We speak all languages</li>
+              <li class="list__item">Perfect for families</li>
+            </ul>
+            <div class="recommend">
+              <p class="recommend__paragraph">
+                Lucy and 3 other friends recommend this hotel.
+              </p>
+              <div class="recommend__photo">
+                <img src="./img/user-3.jpg" alt="friendPic">
+                <img src="./img/user-1.jpg" alt="friendPic">
+                <img src="./img/user-2.jpg" alt="friendPic">
+                <img src="./img/user-4.jpg" alt="friendPic">
+              </div>
+            </div>
+          </div>
+
+          <div class="user-reviews">
+            User Reviews
+          </div>
+        </div>
+
       </main>
     </div>
   </div>
