Added more content stylings

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
               <p class="recommend__paragraph">
                 Lucy and 3 other friends recommend this hotel.
               </p>
-              <div class="recommend__photo">
-                <img src="./img/user-3.jpg" alt="friendPic">
-                <img src="./img/user-1.jpg" alt="friendPic">
-                <img src="./img/user-2.jpg" alt="friendPic">
-                <img src="./img/user-4.jpg" alt="friendPic">
+              <div class="recommend__friends">
+                <img src="./img/user-3.jpg" alt="friendPic" class="recommend__photo">
+                <img src="./img/user-1.jpg" alt="friendPic" class="recommend__photo">
+                <img src="./img/user-2.jpg" alt="friendPic" class="recommend__photo">
+                <img src="./img/user-4.jpg" alt="friendPic" class="recommend__photo">
               </div>
             </div>
           </div>
