--- a/index.html
+++ b/index.html
@@ -158,8 +158,45 @@
           </div>
 
           <div class="user-reviews">
-            User Reviews
+            <figure class="review">
+              <blockquote class="review__text">
+                Quae sequi repellat rem non doloribus sint est quis vitae fugit veritatis eum, maiores magni soluta aut, sed explicabo, minima quidem tenetur!
+              </blockquote>
+              <figcaption class="review__user">
+                <img src="./img/user-1.jpg" alt="user" class="review__photo">
+                <div class="review__user-box">
+                  <p class="review__user-name">Nick Smith</p>
+                  <p class="review__user-date">Feb 23rd, 2017</p>
+                </div>
+                <div class="review__rating">7.8</div>
+              </figcaption>
+            </figure>
+
+            <figure class="review">
+              <blockquote class="review__text">
+                Quae sequi repellat rem non doloribus sint est quis vitae fugit veritatis eum, maiores magni soluta aut, sed explicabo, minima quidem tenetur!
+              </blockquote>
+              <figcaption class="review__user">
+                <img src="./img/user-2.jpg" alt="user" class="review__photo">
+                <div class="review__user-box">
+                  <p class="review__user-name">Mary Thomas</p>
+                  <p class="review__user-date">Mar 16th, 2017</p>
+                </div>
+                <div class="review__rating">7.2</div>
+              </figcaption>
+            </figure>
+
+            <button class="btn-inline">Show All <span>&rarr;</span></button>
           </div>
+        </div>
+
+        
+        <div class="cta">
+          <h2 class="cta__book-now">Good News! We have free rooms for your selected dates!</h2>
+          <button class="btn">
+            <span class="btn__visible">Book now</span>
+            <span class="btn__invisible">Only 4 rooms left</span>
+          </button>
         </div>
 
       </main>
